--- a/config.yaml
+++ b/config.yaml
@@ -1,23 +1,22 @@
 use_gpu: true
 
+scoring:
+  mode: hybrid   # local + GPT mixing
+  max_clips: 5
+  window_sec: 10
+  stride_sec: 5
 clip:
-  min_seconds: 20
+  min_seconds: 15
   max_seconds: 45
-  buffer_in: 0.4
-  buffer_out: 0.6
+  buffer_in: 0.25
+  buffer_out: 0.35
+
 
 captions:
   style: outlined
   font: Arial.ttf
   size_ratio: 0.06
   emoji: false
-
-scoring:
-  mode: gpt           # "gpt" or "local"
-  gpt_model: gpt-4o-mini
-  max_clips: 5
-  window_sec: 120      # analyze 2-min windows
-  stride_sec: 30       # 30s overlap to avoid chopping hooks
 
 
 reframe:
