--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,13 @@
 setuptools<81
-faster-whisper
-ffmpeg-python
 openai
-moviepy
-pysrt
-pyyaml
-numpy
-scenedetect
-opencv-python
+openai-whisper
+torch
+torchaudio
+torchvision
 librosa
-pydub
-tensorflow-cpu
-
-
+numpy
+PyYAML
+ffmpeg-python
+opencv-python
+pysrt
+scenedetect
